# sandbox

./: README.md  test.py
card_trader_test/: .env.example  .gitignore  docker-compose.yaml
card_trader_test/app/: Dockerfile  main.py  requirements.txt  utils.py
card_trader_test/db/init/: 01_schema.sql  02_indexes.sql  05_cluster.sql  06_cron.sql
nes/hardware/: cpu.py  memory.py
nes/test/: hardwaretst.py
sensors/: Cargo.toml
sensors/src/: main.rs
telebot/: GPbot.py
telebot/python_code/: GPbot.py  bot_config.py  telebot_utils.py
telebot/sql_code/stored_procedures/: update_chats.sql  update_message_types.sql  update_users.sql
telebot/sql_code/tables/: chats.sql  chats_staging.sql  message_audios.sql  message_contacts.sql  message_entities.sql  message_locations.sql  message_photos.sql  message_poll_options.sql  message_polls.sql  message_stickers.sql  message_types.sql  message_types_staging.sql  message_videos.sql  messages.sql  processing_errors.sql  raw_messages.sql  users.sql  users_staging.sql
telebot/sql_code/views/: chats_dimension.sql  message_facts.sql  users_dimension.sql
trading_bot/python_code/: test_real_time_data.py  test_trading_algo.ipynb
trading_bot/sql_code/schema/: trading_bot.sql
trading_bot/sql_code/tables/: currency_events.sql
word_search_rust/: Cargo.toml
word_search_rust/src/: main.rs
